@@ -103,6 +103,12 @@ v1.3.alpha1 (2013-04-05)
 v1.2.3 (XXXX-XX-XX)
 -------------------
 
+* added optional parameter `edgexamples` for AQL function EDGES() and NEIGHBORS()
+
+* added AQL function NEIGHBORS()
+ 
+* added freebsd support
+
 * fixed firstExample() query with `_id` and `_key` attributes
 
 * issue triAGENS/ArangoDB-PHP#55: AQL optimiser may have mis-optimised duplicate 
